# LlamaAnimate

./: README.md  docker-compose.yml  dockerfile  notes  reply.txt  testing  voice-input.txt
companion/: Cargo.toml  angry.txt  docker-compose.yml  dockerfile  extatic.txt  happy.txt  install_ollama3.2  interested.txt  neutral.txt  prereq.sh  script.sh
companion/piper-master/piper-master/: .dockerignore  Dockerfile  desktop.ini  script.sh
companion/src/: main.rs
