[package]
name = "learning_requests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version= "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sentiment = "0.1.1"
vader-sentimental = "0.1.2"
